--- a/learning_logs/templates/learning_logs/base.html
+++ b/learning_logs/templates/learning_logs/base.html
@@ -1,6 +1,20 @@
 <p>
     <a href="{% url 'learning_logs:index' %}"> LearningLog</a> -
-    <a href="{% url 'learning_logs:topics' %}"> Topics</a>
+    <a href="{% url 'learning_logs:topics' %}"> Topics</a> - 
+    {% if user.is_authenticated %}
+        Hello, {{ user.username }}
+    {% else %}
+        <a href="{% url 'accounts:register' %}">Register</a> -
+        <a href="{% url 'accounts:login' %}">Log In</a>
+    {% endif %}
 </p>
 {% block content %}
 {% endblock %}
+
+{% if user.is_authenticated %}
+    <hr />
+    <form action="{% url 'accounts:logout' %}" method='post'>
+        {% csrf_token %}
+        <button name="submit">Log Out</button>
+    </form>
+{% endif %}
