--- a/learning_logs/templates/learning_logs/new_topic.html
+++ b/learning_logs/templates/learning_logs/new_topic.html
@@ -3,7 +3,7 @@
 {% block content %}
     <p>Add a new topic:</p>
 
-    <form action="{url 'learning_logs:newtopic' %}" method='post'>
+    <form action="{% url 'learning_logs:new_topic' %}" method='post'>
         {% csrf_token %}
         {{ form.as_div }}
         <button name="submit">Add Topic</button>
