--- a/learning_logs/templates/learning_logs/index.html
+++ b/learning_logs/templates/learning_logs/index.html
@@ -1,8 +1,19 @@
 {% extends 'learning_logs/base.html' %}
 
-<h1>Learning Log</h1>
-{%block content %}
-<p> Log helps you keep track of your learning, for any topic
-    you are interested in
-</p>
-{%endblock content %}
+{% block page_header %}
+    <div class="p-3 mb-4 bg-lgiht border rounded-3">
+        <div class="container-fluid py-4">
+            <h1 class="display-3">Track Your Habits</h1>
+
+            <p class="lead">Track your own habits, and keep an organized list 
+                of what your habits are. Whenever you want to track a new habit,
+                make a new entry to log the habit and what your learned or did that
+                day to stay motivated
+            </p>
+            <a class="btn btn-primary btn-lg mt-1"
+            href="{% url 'accounts:register' %}">Register Today &raquo; </a>
+
+        </div>
+    </div>
+
+{% endblock page_header %}
