--- a/learning_logs/templates/learning_logs/new_entry.html
+++ b/learning_logs/templates/learning_logs/new_entry.html
@@ -1,16 +1,27 @@
 {% extends "learning_logs/base.html" %}
+{% load django_bootstrap5 %}
+
+{% block page_header %}
+    <h2 class="my-4">Add a New Entry</h2>
+{% endblock page_header %}
 
 {% block content %}
+<div class="container">
+    <p><a href="{% url 'learning_logs:topic' topic.id %}">{{ topic }}</a></p>
 
-<p> <a href="{% url 'learning_logs:topic' topic.id %}">{{ topic }}</a></p>
+    <div class="bg-light p-4 rounded shadow-sm mt-4">
+        <form action="{% url 'learning_logs:new_entry' topic.id %}" method="post">
+            {% csrf_token %}
+            
+            <div class="mb-3">
+                {% bootstrap_form form layout='horizontal' %}
+            </div>
 
-<p>Add a new entry:</p>
-
-<form action="{% url 'learning_logs:new_entry' topic.id %}" method ='post'>
-    {% csrf_token %}
-    {{form.as_div }}
-    <button name='submit'>Add Entry</button>
-</form>
-
-
+            <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                {% bootstrap_button button_type="submit" content="Add Entry" button_class="btn btn-primary" %}
+            </div>
+        </form>
+    </div>
+</div>
 {% endblock content %}
+
