--- a/learning_logs/templates/learning_logs/topic.html
+++ b/learning_logs/templates/learning_logs/topic.html
@@ -1,22 +1,25 @@
 {% extends 'learning_logs/base.html' %}
 
-{% block content %}
-<p> Topic: {{topic.text}}</p>
+{% block page_header %}
+<h1>{{ topic.text}}</h1>
+{% endblock page_header %}
 
-<p>Entries:</p>
+{% block content %}
+
 <p>
     <a href="{% url 'learning_logs:new_entry' topic.id %}">Add a new Entry</a>
 </p>
-<ul>
-    {% for entry in entries %}
-        <li>
-            <p>{{ entry.date_added|date:'M d, Y H:i' }}</p>
-            <p>{{ entry.text|linebreaks }}</p>
-            <p><a href="{% url 'learning_logs:edit_entry' entry.id %}">Edit Entry</a></p>
-        </li>
+{% for entry in entries %}
+    <div class="card mb-3">
+        <h4 class="card-header">
+            {{ entry.date_added|date:'M d, Y H:i' }}
+            <small><a href="{% url 'learning_logs:edit_entry' entry.id %}">Edit Entry</a></small>
+
+        </h4>
+        <div class="card-body"> {{ entry.text|linebreaks }}</div>
+    </div>
     {% empty %}
-        <li> There are no entries for this topic yet.</li>
+        <p>There are no entries for your Habit yet</p>
     {% endfor %}
-</ul>
 
 {% endblock content %}
