--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -1,16 +1,15 @@
 {% extends 'learning_logs/base.html' %}
-
+{% load django_bootstrap5 %}
+{% block page_header %}
+    <h2>Login</h2>
+{% endblock page_header %}
 {% block content %}
-
-{% if form.errors %}
-    <p>Your username or password didn't match please try again.</p>
-{% endif %}
 
 <form action="{% url 'accounts:login' %}" method='post'>
     {% csrf_token %}
-    {{ form.as_div }}
-
-    <button name="submit">Log in</button>
+    {% bootstrap_form form %}
+    {% bootstrap_button button_type="submit" content="Log in" %}
+    
 </form>
 
 
