--- a/learning_logs/templates/learning_logs/edit_entry.html
+++ b/learning_logs/templates/learning_logs/edit_entry.html
@@ -1,10 +1,14 @@
 {% extends "learning_logs/base.html" %}
+{% load django_bootstrap5 %}
+{% block page_header %}
+    <h2>Edit Entry</h2>
+{% endblock page_header %}
 
 {% block content %}
 
 <p> <a href="{% url 'learning_logs:topic' topic.id %}"> {{ topic }}</a> </p>
 
-<p>Edit Entry:</p>
+
 
 <form action="{% url 'learning_logs:edit_entry' entry.id %}" method='post'>
     {% csrf_token %}
