--- a/learning_logs/templates/learning_logs/new_topic.html
+++ b/learning_logs/templates/learning_logs/new_topic.html
@@ -1,12 +1,17 @@
 {% extends "learning_logs/base.html" %}
+{% load django_bootstrap5 %}
+
+{% block page_header %}
+    <h2>Add a Habit</h2>
+{% endblock page_header %}
 
 {% block content %}
-    <p>Add a new topic:</p>
+
 
     <form action="{% url 'learning_logs:new_topic' %}" method='post'>
         {% csrf_token %}
-        {{ form.as_div }}
-        <button name="submit">Add Topic</button>
+        {% bootstrap_form form %}
+    {% bootstrap_button button_type="submit" content="Add Habit" %}
     </form>
 
     {% endblock content %}
